<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_stats"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_diet_monitoring"
            android:icon="@drawable/ic_diet_monitoring"
            android:title="@string/menu_diet_monitoring" />
        <item
            android:id="@+id/nav_sleep_monitoring"
            android:icon="@drawable/ic_sleep_monitoring"
            android:title="@string/menu_sleep_monitoring" />

        <item
            android:id="@+id/nav_water_tracker"
            android:icon="@drawable/ic_large_water_bottle"
            android:title="@string/menu_water_tracker" />

        <item
            android:id="@+id/nav_workout_plan"
            android:icon="@drawable/ic_workout_plan"
            android:title="@string/workout_plan" />
    </group>
</menu>
