<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.group7.jhealth.fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <action
        android:id="@+id/action_global_navigate_to_home_fragment"
        app:destination="@id/nav_home" />

    <fragment
        android:id="@+id/nav_diet_monitoring"
        android:name="com.group7.jhealth.fragments.DietMonitoringFragment"
        android:label="@string/menu_diet_monitoring"
        tools:layout="@layout/fragment_diet_monitoring" />
    <action
        android:id="@+id/action_global_navigate_to_diet_monitoring_fragment"
        app:destination="@id/nav_diet_monitoring" />

    <fragment
        android:id="@+id/nav_sleep_monitoring"
        android:name="com.group7.jhealth.fragments.SleepMonitoringFragment"
        android:label="@string/menu_sleep_monitoring"
        tools:layout="@layout/fragment_sleep_monitoring" />
    <action
        android:id="@+id/action_global_navigate_to_sleep_monitoring_fragment"
        app:destination="@id/nav_sleep_monitoring" />

    <fragment
        android:id="@+id/nav_water_tracker"
        android:name="com.group7.jhealth.fragments.WaterTrackerFragment"
        android:label="@string/menu_water_tracker"
        tools:layout="@layout/fragment_water_intake" />
    <action
        android:id="@+id/action_global_navigate_to_water_tracker_fragment"
        app:destination="@id/nav_water_tracker" />

    <fragment
        android:id="@+id/nav_workout_plan"
        android:name="com.group7.jhealth.fragments.WorkoutPlanFragment"
        android:label="@string/workout_plan"
        tools:layout="@layout/fragment_workout_plan">
        <action
            android:id="@+id/action_nav_workout_plan_to_nav_abs_frag"
            app:destination="@id/nav_abs_frag" />
        <action
            android:id="@+id/action_nav_workout_plan_to_nav_back_frag"
            app:destination="@id/nav_back_frag" />
        <action
            android:id="@+id/action_nav_workout_plan_to_nav_biceps_frag"
            app:destination="@id/nav_biceps_frag" />
        <action
            android:id="@+id/action_nav_workout_plan_to_nav_chest_frag"
            app:destination="@id/nav_chest_frag" />
        <action
            android:id="@+id/action_nav_workout_plan_to_nav_forearm_frag"
            app:destination="@id/nav_forearm_frag" />
        <action
            android:id="@+id/action_nav_workout_plan_to_nav_leg_frag"
            app:destination="@id/nav_leg_frag" />
        <action
            android:id="@+id/action_nav_workout_plan_to_nav_shoulder_frag"
            app:destination="@id/nav_shoulder_frag" />
        <action
            android:id="@+id/action_nav_workout_plan_to_nav_triceps_frag"
            app:destination="@id/nav_triceps_frag" />
    </fragment>
    <action
        android:id="@+id/action_global_navigate_to_workout_plan_fragment"
        app:destination="@id/nav_workout_plan" />

    <fragment
        android:id="@+id/nav_login_form"
        android:name="com.group7.jhealth.fragments.LoginFormFragment"
        android:label="@string/information"
        tools:layout="@layout/fragment_login_form" />
    <action
        android:id="@+id/action_global_navigate_to_login_form_fragment"
        app:destination="@id/nav_login_form" />

    <fragment
        android:id="@+id/nav_preferences"
        android:name="com.group7.jhealth.fragments.PreferencesFragment"
        android:label="@string/settings" />
    <action
        android:id="@+id/action_global_navigate_to_preferences_fragment"
        app:destination="@id/nav_preferences" />

    <fragment
        android:id="@+id/nav_record_entry"
        android:name="com.group7.jhealth.fragments.RecordEntryFragment"
        android:label="@string/diet_monitoring"
        tools:layout="@layout/fragment_record_entry" />
    <action
        android:id="@+id/action_global_navigate_to_record_entry_fragment"
        app:destination="@id/nav_record_entry" />
    <fragment
        android:id="@+id/nav_calorie_counter"
        android:name="com.group7.jhealth.fragments.CalorieCounterFragment"
        android:label="@string/diet_monitoring"
        tools:layout="@layout/fragment_calorie_counter" />
    <action
        android:id="@+id/action_global_navigate_to_calorie_counter_fragment"
        app:destination="@id/nav_calorie_counter" />
    <fragment
        android:id="@+id/nav_abs_frag"
        android:name="com.group7.jhealth.fragments.ABSFragment"
        android:label="@string/ABS"
        tools:layout="@layout/fragment_abs" />

    <fragment
        android:id="@+id/nav_back_frag"
        android:name="com.group7.jhealth.fragments.BackFragment"
        android:label="@string/back"
        tools:layout="@layout/fragment_back" />

    <fragment
        android:id="@+id/nav_biceps_frag"
        android:name="com.group7.jhealth.fragments.BicepsFragment"
        android:label="@string/biceps"
        tools:layout="@layout/fragment_biceps" />

    <fragment
        android:id="@+id/nav_chest_frag"
        android:name="com.group7.jhealth.fragments.ChestFragment"
        android:label="@string/chest"
        tools:layout="@layout/fragment_chest" />

    <fragment
        android:id="@+id/nav_forearm_frag"
        android:name="com.group7.jhealth.fragments.ForearmFragment"
        android:label="@string/forearms"
        tools:layout="@layout/fragment_forearm" />

    <fragment
        android:id="@+id/nav_leg_frag"
        android:name="com.group7.jhealth.fragments.LegFragment"
        android:label="@string/legs"
        tools:layout="@layout/fragment_leg" />

    <fragment
        android:id="@+id/nav_shoulder_frag"
        android:name="com.group7.jhealth.fragments.ShoulderFragment"
        android:label="@string/shoulders"
        tools:layout="@layout/fragment_shoulder" />

    <fragment
        android:id="@+id/nav_triceps_frag"
        android:name="com.group7.jhealth.fragments.TricepsFragment"
        android:label="@string/triceps"
        tools:layout="@layout/fragment_triceps" />

</navigation>