<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginBottom="4dp"
            android:text="@string/what_is_your_name"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:ems="10"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp"
            android:text="@string/how_old_are_you"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/ageEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/age"
            android:importantForAutofill="no"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp"
            android:text="@string/gender"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/genderRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp">

            <RadioButton
                android:id="@+id/femaleRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/female" />

            <RadioButton
                android:id="@+id/maleRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/male" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp"
            android:text="@string/what_do_you_weight"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/weightEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/weight"
            android:importantForAutofill="no"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp"
            android:text="@string/sleep_time"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/wakeUpTimeTextView"
                android:layout_width="100dp"
                android:layout_height="30sp"
                android:background="@drawable/button_ripple_effect"
                android:gravity="center"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30sp"
                android:text="@string/dash_separator"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/sleepTimeTextView"
                android:layout_width="100dp"
                android:layout_height="30sp"
                android:background="@drawable/button_ripple_effect"
                android:gravity="center"
                android:textSize="18sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/workoutDurationTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/workout_duration"
            android:textSize="18sp" />

        <SeekBar
            android:id="@+id/workoutDurationSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:max="300" />

    </LinearLayout>
</ScrollView>