<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/curlsButton"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="8dp"
            android:background="@drawable/button_ripple_effect"
            android:text="@string/curls"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/barbellCurlsButton"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="8dp"
            android:background="@drawable/button_ripple_effect"
            android:text="@string/barbell_curls"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/preacherCurlsButton"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="8dp"
            android:background="@drawable/button_ripple_effect"
            android:text="@string/preacher_curls"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/hammerCurlsButton"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="8dp"
            android:background="@drawable/button_ripple_effect"
            android:text="@string/hammer_curls"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/cableBicepsCurlButton"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="8dp"
            android:background="@drawable/button_ripple_effect"
            android:text="@string/cable_biceps_curl"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>