<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/backPressButton"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="8dp"
            android:background="@drawable/button_ripple_effect"
            android:text="@string/back_presses"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/seatedFrontPressButton"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="8dp"
            android:background="@drawable/button_ripple_effect"
            android:text="@string/seated_front_presses"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/seatedDumbbellPressButton"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="8dp"
            android:background="@drawable/button_ripple_effect"
            android:text="@string/seated_dumbbell_presses"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/uprightRowButton"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="8dp"
            android:background="@drawable/button_ripple_effect"
            android:text="@string/upright_rows"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/lateralRaiseButton"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="8dp"
            android:background="@drawable/button_ripple_effect"
            android:text="@string/lateral_raises"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>