<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/closeGripBenchPressButton"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="8dp"
            android:background="@drawable/button_ripple_effect"
            android:text="@string/close_grip_bench_presses"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/pushDownButton"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="8dp"
            android:background="@drawable/button_ripple_effect"
            android:text="@string/push_downs"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/tricepsExtensionButton"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="8dp"
            android:background="@drawable/button_ripple_effect"
            android:text="@string/triceps_extensions"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/tricepsPushdownButton"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="8dp"
            android:background="@drawable/button_ripple_effect"
            android:text="@string/triceps_pushdown"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/diamondPushupButton"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="8dp"
            android:background="@drawable/button_ripple_effect"
            android:text="@string/diamond_pushup"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>