<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical">
        <EditText
            android:id="@+id/weightEditText"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:ems="10"
            android:layout_marginTop="150dp"
            android:background="@drawable/button_ripple_effect"
            android:layout_gravity="center_horizontal"
            android:importantForAutofill="no"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textAlignment="center"
            android:hint="@string/weight"
            android:inputType="number"/>
        <EditText
            android:id="@+id/caloriesEditText"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:ems="10"
            android:layout_marginTop="70dp"
            android:textAlignment="center"
            android:background="@drawable/button_ripple_effect"
            android:layout_gravity="center_horizontal"
            android:importantForAutofill="no"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:hint="@string/calories"
            android:inputType="number"/>

    <Button
        android:id="@+id/submitRecordButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/button_ripple_effect"
        android:layout_marginRight="24dp"
        android:text="@string/submit" />
</LinearLayout>