<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dietMonitoringTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="4dp"
            android:text="@string/menu_diet_monitoring"
            android:textSize="24sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/charts_graphs_stats_percentages_etc" />

        <TextView
            android:id="@+id/sleepMonitoringTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="4dp"
            android:text="@string/menu_sleep_monitoring"
            android:textSize="24sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/charts_graphs_stats_percentages_etc" />

        <TextView
            android:id="@+id/waterTrackerTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="4dp"
            android:text="@string/menu_water_tracker"
            android:textSize="24sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/charts_graphs_stats_percentages_etc" />

        <TextView
            android:id="@+id/workoutPlanTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="4dp"
            android:text="@string/workout_plan"
            android:textSize="24sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/charts_graphs_stats_percentages_etc" />

    </LinearLayout>

</ScrollView>